agoge-pricing/force-app/main/default/objects/Account/validationRules/AccountValidateCNPJ.validationRule-meta.xml
<ValidationRule>
    <fullName>AccountValidateCNPJ</fullName>
    <active>true</active>
    <description>Rule to know if a CNPJ is valid</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(CNPJ__c)),
NOT(REGEX(CNPJ__c,&quot;^(\\d{2}\\.\\d{3}\\.\\d{3}/\\d{4}\\-\\d{2})?$&quot;))
)</errorConditionFormula>
    <errorMessage>Insira um CNPJ válido</errorMessage>
</ValidationRule>